--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "my-first-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/splash-icon2.png",
     "scheme": "myfirstapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -19,7 +19,8 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.anonymous.myfirstapp"
     },
     "web": {
       "output": "static",
@@ -30,15 +31,24 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/splash-icon2.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
           "dark": {
+            "image": "./assets/images/splash-icon2.png",
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],  
+      [
+        "expo-localization",
+        {
+          "supportedLocales": {
+            "android": ["ru", "en"]
+          }
+        } 
+      ]   
     ],
     "experiments": {
       "typedRoutes": true,
